--- a/dTV/News.htm
+++ b/dTV/News.htm
@@ -7,7 +7,16 @@
 <BODY>
 <H1>dTV News</H1>
 
-<P>1.0.2 Fix for flipping with bTV plug-ins<br>
-1.0.1 Added support for bTV plugins and full screen support.<br>
-1.0.0 The original version only had support for manual inverse telecine.</P>
+<P>1.0.3&nbsp;&nbsp;&nbsp; Code clean up<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Better card
+support<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sound bugs
+fixed<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Changed
+overlay colour<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Open Source
+video deinterlace version 1<br>
+1.0.2&nbsp;&nbsp;&nbsp;&nbsp; Fix for flipping with bTV plug-ins<br>
+1.0.1&nbsp;&nbsp;&nbsp;&nbsp; Added support for bTV plugins and full screen support.<br>
+1.0.0&nbsp;&nbsp;&nbsp;&nbsp; The original version only had support for manual inverse telecine.</P>
 </BODY>
