--- a/dTV/installation.htm
+++ b/dTV/installation.htm
@@ -18,16 +18,14 @@
 <P>On my setup I have got it working with PAL and NTSC.&nbsp; My card has a
 BT878 and so it may work differently or not at all with your card.</P>
 
-<P>I have not really tested the tuner part of the program, so first select the
-external input</P>
-
 <h3>PAL Setup</h3>
 
 <ol>
-  <li>Select video card type from list in Hardware/TV-Card</li>
-  <li>Select tuner type from list in Hardware/Select Tuner</li>
-  <li>In Hardware/PLL settings Box marked PLL (28MHz Crystal) should be ticked
-    if you have anything except an B848 card, try with first</li>
+  <li>Delete any pervious copy of dTV.ini</li>
+  <li>Select video card&nbsp; and tuner type from dialog box that appears on
+    startup.&nbsp; If your exact card type is not listed then try Standard Card
+    (bt878).&nbsp; The make of tuner should be on the silver box on the card,
+    choose the correct type depending on your region.</li>
   <li>Select required input from Settings/Video Input.</li>
   <li>Adjust Video settings using Setting/Video Adjustments</li>
 </ol>
@@ -35,15 +33,18 @@ external input</P>
 <h3>NTSC Setup</h3>
 
 <ol>
-  <li>Select video card type from list in Hardware/TV-Card</li>
-  <li>Select tuner type from list in Hardware/Select Tuner</li>
+  <li>Delete any pervious copy of dTV.ini</li>
+  <li>Select video card&nbsp; and tuner type from dialog box that appears on
+    startup. If your exact card type is not listed then try Standard Card
+    (bt878).&nbsp; The make of tuner should be on the silver box on the card,
+    choose the correct type depending on your region.</li>
   <li>Select NTSC from Settings/Video Format.</li>
   <li>Select required input from Settings/Video Input.</li>
   <li>Adjust Video settings using Setting/Video Adjustments</li>
 </ol>
 
 <h2>What if That Doesn't Work?</h2>
-<p>Try the various PLL settings.<br>
+<p>
 <a href="mailto:john@adcock8.freeserve.co.uk">E-Mail John Adcock</a> for help so that we
 can try and get your card supported</p>
 
