--- a/dTV/Thanks.htm
+++ b/dTV/Thanks.htm
@@ -14,10 +14,11 @@ developers who have contributed code to the project.</p>
 <p>See <a href="MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> for a list of thanks for the project dTV was
 based on&nbsp;</p>
 <ol>
+  <li>Thanks to Daniel Schmelzer for his hard work creating and updating the website.  Love the logo!&nbsp;</li>
   <li>A big debt a gratitude is due to Mark Rejhon for his help testing, promoting dTV 
   but particularly for his vision and his refusal to accept second best.&nbsp;</li>
   <li>Thanks to everybody on the deinterlace project mailing list</li>
-  <li> Thanks to Yvon Quere and Ali for finding bTV, the inspiration for this project.&nbsp;</li>
+  <li>Thanks to Yvon Quere and Ali for finding bTV, the inspiration for this project.&nbsp;</li>
   <li>Thanks to all at the AVSForums for your encouragement and help.  The HTPC forum is
   easily the best group on the internet.</li>
 </ol>
