--- a/dTV/Authors.htm
+++ b/dTV/Authors.htm
@@ -9,7 +9,7 @@
 <h3>
 John Adcock (<a href="mailto:john@adcock8.freeserve.co.uk">john@adcock8.freeserve.co.uk</a>)</h3>
 <blockquote>
-  <p>John did most of the workcleaning, translating and legalising Multidec and
+  <p>John did most of the work cleaning, translating and legalizing Multidec and
   is the current project admin&nbsp;</p>
 </blockquote>
 <p>
