--- a/dTV/News.htm
+++ b/dTV/News.htm
@@ -7,7 +7,12 @@
 <BODY>
 <H1>dTV News</H1>
 
-<P>1.0.3&nbsp;&nbsp;&nbsp; Code clean up<br>
+<P>1.0.4&nbsp;&nbsp;&nbsp; Fixed Problems with Overlays in low colour depths<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Added
+snapshot support<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Added
+Overscan<br>
+1.0.3&nbsp;&nbsp;&nbsp; Code clean up<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Better card
 support<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sound bugs
