--- a/dTV/keyboard.htm
+++ b/dTV/keyboard.htm
@@ -10,20 +10,23 @@
 <body>
 
 <h2>Keyboard shortcuts</h2>
-<p>Brightness down - b<br>
-Brightness up - Shift b<br>
-colour down - c<br>
-colour up - Shift c<br>
-Contrast down - k<br>
-Contrast up - shift k<br>
-Hue down - h<br>
-Hue up - shift h<br>
-Mute - m<br>
+<p>Take Still - L<br>
+Brightness down - B<br>
+Brightness up - Shift B<br>
+colour down - C<br>
+colour up - Shift C<br>
+Contrast down - K<br>
+Contrast up - shift K<br>
+Overscan down - O<br>
+Overscan up - shift O<br>
+Hue down - H<br>
+Hue up - shift H<br>
+Mute - M<br>
 Channel up - F1<br>
 Channel down - F2<br>
 Toggle Menu on/off - F4<br>
 Toggle Full Screen - F6<br>
-Toggle Status Bar on/off - s<br>
+Toggle Status Bar on/off - S<br>
 Exit - Esc</p>
 
 </body>
