--- a/dTV/News.htm
+++ b/dTV/News.htm
@@ -7,7 +7,15 @@
 <BODY>
 <H1>dTV News</H1>
 
-<P>1.0.4&nbsp;&nbsp;&nbsp; Fixed Problems with Overlays in low colour depths<br>
+<P>1.0.5&nbsp;&nbsp;&nbsp; Changed deinterlacing routine to adaptive one<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Implemented
+automatic pulldown detection for PAL based on comb method<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Implemented
+automatic pulldown detection for NTSC based <a href="32Spec.htm">Mark Rejhon's 3:2
+    Pulldown Spec<br>
+</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Disabled
+VBI support :-(<br>
+1.0.4&nbsp;&nbsp;&nbsp; Fixed Problems with Overlays in low colour depths<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Added
 snapshot support<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Added
