--- a/dTV/Todo.htm
+++ b/dTV/Todo.htm
@@ -11,21 +11,17 @@ There is still loads to do to make everyone happy.&nbsp;<br>
 
 Here is my list in no particular order.&nbsp;
 <ol>
-  <li>&nbsp;Fix teletext</li>
+  <li>Fix VBI code</li>
   <li>Sort out timing so that playback is smoother&nbsp;</li>
   <li>Add Closed Captioning&nbsp;</li>
-  <li>Improve Video source deinterlacing&nbsp;</li>
-  <li>Fix 3:2 pulldown detection see <a href="32Spec.htm">Mark Rejhon's 3:2
-    Pulldown Spec</a></li>
-  <li>Fix 2:2 pulldown detection&nbsp;</li>
   <li>Calibrate Cards to give best set of video adjustments&nbsp;</li>
   <li>Support extra tuner and sound chips&nbsp;</li>
   <li>On screen display for channel, Volume etc&nbsp;</li>
-  <li>Still Capture&nbsp;</li>
   <li>Easier Configuration&nbsp;</li>
   <li>Continue to clean up code</li>
   <li>Convert to C++ so that the split between private and public functions is cleaner&nbsp;</li>
   <li>Remove last of German comments&nbsp;</li>
+  <li>Aspect ratio adjustments, similar to YXY</li>
 </ol>
 <p>
 
