--- a/dTV/dTV_Readme.htm
+++ b/dTV/dTV_Readme.htm
@@ -5,10 +5,10 @@
 <TITLE>dTV ReadMe</TITLE>
 </HEAD>
 <BODY>
-<H1>dTV - version 1.0.3</H1>
+<H1>dTV - version 1.0.5</H1>
 <H2><a HREF="http://deinterlace.sourceforge.net/">Original site</a></H2>
 <H2>by John Adcock [<a href="mailto:john@adcock8.freeserve.co.uk">john@adcock8.freeserve.co.uk</a>]</H2>
-<P>What's new: Fix for flipping with bTV plug-ins</P>
+<P>What's new: Auto Pulldown support!</P>
 
 <H2>License:</H2>
 
@@ -55,6 +55,10 @@ for whichever operating system you are running.</font></P>
 manually using the space bar.&nbsp; So to use get a picture by playing around
 with the settings as above.&nbsp; Then put in a film and press the spacebar
 until the weave patterns disappear.</P>
+
+<P>Or you can use the automatic detection feature.&nbsp; Settings/Automatic
+Pulldown Detect.&nbsp; This should select the best method for what your
+watching.</P>
 
 <p>It is possible to specify a bTV plugin for the program to use.&nbsp; The
 default is bDeinterlace.dll with UseKey1 set to 1.</p>
