--- a/dTV/Thanks.htm
+++ b/dTV/Thanks.htm
@@ -15,10 +15,14 @@ developers who have contributed code to the project.</p>
 based on&nbsp;</p>
 <ol>
   <li>Thanks to Daniel Schmelzer for his hard work creating and updating the website.  Love the logo!&nbsp;</li>
-  <li>A big debt a gratitude is due to Mark Rejhon for his help testing, promoting dTV 
+  <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 alogirthm and his
+    help testing, promoting dTV 
   but particularly for his vision and his refusal to accept second best.&nbsp;</li>
+  <li>Thanks to Steve Grimm for his work on the old method of 3:2 pulldown.</li>
   <li>Thanks to everybody on the deinterlace project mailing list</li>
-  <li>Thanks to Yvon Quere and Ali for finding bTV, the inspiration for this project.&nbsp;</li>
+  <li>Thanks to Borg, creator of bTV, for writing the first ever computer
+    deinterlacing program the inspiration for this project</li>
+  <li>Thanks to Yvon Quere and Ali for finding bTV.&nbsp;</li>
   <li>Thanks to all at the AVSForums for your encouragement and help.  The HTPC forum is
   easily the best group on the internet.</li>
 </ol>
