--- a/dTV/Todo.htm
+++ b/dTV/Todo.htm
@@ -11,9 +11,8 @@ There is still loads to do to make everyone happy.&nbsp;<br>
 
 Here is my list in no particular order.&nbsp;
 <ol>
-  <li>Fix VBI code</li>
-  <li>Sort out timing so that playback is smoother&nbsp;</li>
-  <li>Add Closed Captioning&nbsp;</li>
+  <li>Fix all <a href="Bugs.htm">bugs</a></li>
+  <li>Add Full Closed Captioning&nbsp;</li>
   <li>Calibrate Cards to give best set of video adjustments&nbsp;</li>
   <li>Support extra tuner and sound chips&nbsp;</li>
   <li>On screen display for channel, Volume etc&nbsp;</li>
