--- a/dTV/Bugs.htm
+++ b/dTV/Bugs.htm
@@ -20,9 +20,9 @@ problems to fix.<br>
   <li>VBI code sometimes cases video to jump about.&nbsp; (cause could be
     constant DMA overruns)</li>
   <li>After either pauses, format&nbsp;changes or maximizing the software will
-    no longer lock onto correct pulldown mode and runn with bad artifacts.&nbsp;
+    no longer lock onto correct pulldown mode and run with bad artifacts.&nbsp;
     BT Reset does no cure this but software behaves well after it is started and
-    stopped (Agian appears to be DMA related, or possible bug in the ouput code
+    stopped (Agian appears to be DMA related, or possible bug in the output code
     causing the flip frames to get out of sync)</li>
   <li>Does not work on Mpact video cards in 24 bit hacked mode (not sure if this
     is possible to fix although DVD software run on these cards)</li>
