--- a/dTV/Todo.htm
+++ b/dTV/Todo.htm
@@ -12,7 +12,10 @@ There is still loads to do to make everyone happy.&nbsp;<br>
 Here is my list in no particular order.&nbsp;
 <ol>
   <li>Fix all <a href="Bugs.htm">bugs</a></li>
-  <li>Add Full Closed Captioning&nbsp;</li>
+  <li>Add Full Closed Captioning&nbsp;Support</li>
+  <li>Check that TeleText works properly and move it to display on screen rather
+    than in separate window</li>
+  <li>Default cards with sound chips to MSP/Radio rather than tuner for sound.</li>
   <li>Calibrate Cards to give best set of video adjustments&nbsp;</li>
   <li>Support extra tuner and sound chips&nbsp;</li>
   <li>On screen display for channel, Volume etc&nbsp;</li>
