Preparation for Others To Checkout

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -22,17 +22,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/dtv/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Developers&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -45,17 +45,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         theater industry! The project is currently in need of developers with 
         a broad range of skills (C++, assembly, user interface, video internals, 
         etc.). Your skills will be utilized immediately, as we seek to keep this 
-        extraordinary momentum going. Please see the <a href="/dtv/Developer_docs.htm">Developer 
+        extraordinary momentum going. Please see the <a href="/Developer_docs.htm">Developer 
         Documentation</a> to get started on dTV development and then introduce 
         yourself to the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
         list</a>.</p>
-      <p>Please refer to the <a href="/dtv/Bugs_108.htm">bugs</a> and <a href="/dtv/Todo.htm">Todo</a> 
+      <p>Please refer to the <a href="/Bugs_108.htm">bugs</a> and <a href="/Todo.htm">Todo</a> 
         pages for the current task list. If you think that you can take on a part 
         of one of these tasks, everyone on the mailing list would love to hear 
         from you.</p>
       <h2></h2>
       <p>dTV is released under the GNU Public License. Browse the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
-        repository</a> and take a look at the code, then <a href="/dtv/downloads.htm">download</a> 
+        repository</a> and take a look at the code, then <a href="/downloads.htm">download</a> 
         the latest source zipped. The source compiles under MS Visual C++. The 
         application has grown out of the GPL code base of MultiDec and MoreTV, 
         two cable descrambling programs.&nbsp; By combining the GPL parts of both 
@@ -75,14 +75,14 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         CVS Repository</a></p>
       <h2><br>
         Deinterlace Project Developer Resources</h2>
-      <p>Mark Rejhon's <a href="/dtv/32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
+      <p>Mark Rejhon's <a href="/32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
       </p>
-      <p>John Adcock's <a href="/dtv/PALMovie.htm">PALMovie deinterlace plugin</a> 
+      <p>John Adcock's <a href="/PALMovie.htm">PALMovie deinterlace plugin</a> 
         for bTV.</p>
       <p>A <a href="http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter 
         from Video Demystified</a> dealing with the PAL, NTSC, and SECAM standards 
         as well as Teletext and Closed-Captioning.</p>
-      <p>An explanation of the <a href="/dtv/IniFile.HTM">options available</a> 
+      <p>An explanation of the <a href="/IniFile.HTM">options available</a> 
         in the dTV.ini file.</p>
       <p></p>
       <h2></h2>
@@ -123,7 +123,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -131,15 +131,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/dtv/" class="bottommenu">home</a> | <a href="/dtv/about.htm" class="bottommenu">about</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/dtv/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/dtv/News.htm" class="bottommenu">news</a> | <a href="/dtv/Thanks.htm" class="bottommenu"></a><a href="/dtv/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu"></a><a href="/dtv/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/dtv/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/dtv/installation.htm" class="bottommenu">setup</a> | <a href="/dtv/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
+        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
+        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
+        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/dtv/FAQ.htm" class="bottommenu">faq</a> | <a href="/dtv/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/dtv/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
+        | <a href="/Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
