--- a/htdocs/News.htm
+++ b/htdocs/News.htm
@@ -22,17 +22,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/dtv/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->News&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -65,7 +65,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Documentation (.HTM files) moved into separate 
         subdirectory<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: No TV tuner card related bugfixes 
-        over 1.6; see <a href="/dtv/Bugs_107.htm">Known Bugs</a> for current list<br>
+        over 1.6; see <a href="/Bugs_107.htm">Known Bugs</a> for current list<br>
       </p>
       <p><b>1.6 Beta 4<br>
         </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto detect enabled by default<br>
@@ -76,7 +76,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More reliable config defaults for 3/2 pulldown 
         detection<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changes to synchronization code<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="/dtv/Bugs_106b4.htm">Known 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="/Bugs_106b4.htm">Known 
         Bugs</a> for additional details</p>
       <p><b>1.5</b><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changed deinterlacing routine to adaptive 
@@ -84,7 +84,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Implemented automatic pulldown detection 
         for PAL based on comb method<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Implemented automatic pulldown detection 
-        for NTSC based <a href="/dtv/32Spec.htm">Mark Rejhon's 3:2 Pulldown Spec<br>
+        for NTSC based <a href="/32Spec.htm">Mark Rejhon's 3:2 Pulldown Spec<br>
         </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Disabled VBI support :-(</p>
       <p> <b>1.4</b><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fixed Problems with Overlays in low colour 
@@ -112,7 +112,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -120,15 +120,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/dtv/" class="bottommenu">home</a> | <a href="/dtv/about.htm" class="bottommenu">about</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/dtv/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/dtv/News.htm" class="bottommenu">news</a> | <a href="/dtv/Thanks.htm" class="bottommenu"></a><a href="/dtv/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu"></a><a href="/dtv/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/dtv/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/dtv/installation.htm" class="bottommenu">setup</a> | <a href="/dtv/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
+        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
+        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
+        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/dtv/FAQ.htm" class="bottommenu">faq</a> | <a href="/dtv/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/dtv/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
+        | <a href="/Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
