--- a/htdocs/dTV_Readme102.htm
+++ b/htdocs/dTV_Readme102.htm
@@ -22,18 +22,18 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/dtv/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->dTV 
       Readme<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -81,14 +81,14 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         the spacebar until the weave patterns disappear.</P>
       <p>It is possible to specify a bTV plugin for the program to use.&nbsp; 
         The default is bDeinterlace.dll with UseKey1 set to 1.</p>
-      <p><a href="/dtv/installation.htm">Installation Instruction</a></p>
-      <p><a href="/dtv/card_support.htm">TV Cards Supported</a></p>
-      <p><a href="/dtv/keyboard.htm">Keyboard Shortcuts</a></p>
-      <p><a href="/dtv/News.htm">News</a></p>
-      <p><a href="/dtv/Todo.htm">Todo List</a></p>
-      <p><a href="/dtv/Thanks.htm">Thanks</a></p>
-      <p><a href="/dtv/Authors.htm">Authors</a></p>
-      <p><a href="/dtv/32Spec.htm">Mark Rejhon's 3:2 Spec</a></p>
+      <p><a href="/installation.htm">Installation Instruction</a></p>
+      <p><a href="/card_support.htm">TV Cards Supported</a></p>
+      <p><a href="/keyboard.htm">Keyboard Shortcuts</a></p>
+      <p><a href="/News.htm">News</a></p>
+      <p><a href="/Todo.htm">Todo List</a></p>
+      <p><a href="/Thanks.htm">Thanks</a></p>
+      <p><a href="/Authors.htm">Authors</a></p>
+      <p><a href="/32Spec.htm">Mark Rejhon's 3:2 Spec</a></p>
       <H2>Enjoy!</H2>
       <!-- #EndEditable --></td>
   </tr>
@@ -97,7 +97,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -105,15 +105,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/dtv/" class="bottommenu">home</a> | <a href="/dtv/about.htm" class="bottommenu">about</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/dtv/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/dtv/News.htm" class="bottommenu">news</a> | <a href="/dtv/Thanks.htm" class="bottommenu"></a><a href="/dtv/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu"></a><a href="/dtv/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/dtv/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/dtv/installation.htm" class="bottommenu">setup</a> | <a href="/dtv/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
+        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
+        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
+        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/dtv/FAQ.htm" class="bottommenu">faq</a> | <a href="/dtv/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/dtv/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
+        | <a href="/Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
