--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -22,17 +22,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/dtv/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/dtv/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Download&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -41,7 +41,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <p>Version 1.8&#151;<b>Experimental</b>&#151;[<a href="/distributions/dTV18exe.zip">Binary 
         Zipped</a>] [<a href="/distributions/dTV18src.zip">Source Zipped</a>] 
-        [<a href="/dtv/dTV_Readme108.htm">README</a>]<br>
+        [<a href="/dTV_Readme108.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aspect ratio control simplified and made 
         more intuitive<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Easier hotkeys for common aspect ratios 
@@ -57,9 +57,9 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         sequence changes<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minor code cleanup<br>
       </p>
-      <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="/dtv/distributions/dTV17exe.zip">Binary 
-        Zipped</a>] [<a href="/dtv/distributions/dTV17src.zip">Source Zipped</a>] 
-        [<a href="/dtv/dTV_Readme106.htm">README</a>]<br>
+      <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="/distributions/dTV17exe.zip">Binary 
+        Zipped</a>] [<a href="/distributions/dTV17src.zip">Source Zipped</a>] 
+        [<a href="/dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Integrated Michael's aspect ratio control 
         code<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Many bits and pieces of source code cleanup 
@@ -69,10 +69,10 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Documentation (.HTM files) moved into separate 
         subdirectory<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: No TV tuner card related bugfixes 
-        over 1.6; see <a href="/dtv/Bugs_107.htm">Known Bugs</a> for current list<br>
+        over 1.6; see <a href="/Bugs_107.htm">Known Bugs</a> for current list<br>
       </p>
-      <p>Version 1.6 Beta 4&#151;<b>Stable</b>&#151;[<a href="/dtv/dTV16b4.zip">Binary 
-        Zipped</a>] [<a href="/dtv/dTV16src.zip">Source Zipped</a>] [<a href="/dtv/dTV_Readme106.htm">README</a>]<br>
+      <p>Version 1.6 Beta 4&#151;<b>Stable</b>&#151;[<a href="/dTV16b4.zip">Binary 
+        Zipped</a>] [<a href="/dTV16src.zip">Source Zipped</a>] [<a href="/dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto detect enabled by default<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Video format (e.g., NTSC) automatically 
         selected upon selection of<br>
@@ -81,36 +81,36 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More reliable config defaults for 3/2 pulldown 
         detection<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changes to synchronization code<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="/dtv/Bugs_106b4.htm">Known 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="/Bugs_106b4.htm">Known 
         Bugs</a> for additional details</p>
       <p>Version 1.5&#151;<b>Stable</b>&#151;[<a href="http://deinterlace.sourceforge.net/dTV15exe.zip">Binary 
         Zipped</a>] [<a href="http://deinterlace.sourceforge.net/dTV15src.zip">Source 
-        Zipped</a>] [<a href="/dtv/dTV_Readme105.htm">README</a>]<br>
+        Zipped</a>] [<a href="/dTV_Readme105.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 3:2 pulldown detect for NTSC<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 2:2 pulldown detect for PAL (not very 
         reliable needs some tweaking)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adaptive video deinterlacing<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Teletext and CC broken</p>
-      <p>Version 1.4&#151;<b>Stable</b>&#151;[<a href="/dtv/dTV14exe.zip">Binary 
-        Zipped</a>] [<a href="/dtv/dTV14src.zip">Source Zipped</a>] [<a href="/dtv/dTV_Readme104.htm">README</a>]<br>
+      <p>Version 1.4&#151;<b>Stable</b>&#151;[<a href="/dTV14exe.zip">Binary 
+        Zipped</a>] [<a href="/dTV14src.zip">Source Zipped</a>] [<a href="/dTV_Readme104.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for overlays in low colour depths<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Still capture in ppm format<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overscan support</p>
-      <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="/dtv/dTv13aexe.zip">Binary 
-        Zipped</a>] [<a href="/dtv/dTV13asrc.zip">Source Zipped</a>] [<a href="/dtv/dTV_Readme103.htm">README</a>]<br>
+      <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="/dTv13aexe.zip">Binary 
+        Zipped</a>] [<a href="/dTV13asrc.zip">Source Zipped</a>] [<a href="/dTV_Readme103.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Code clean up<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better card support<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sound bugs fixed<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changed overlay colour<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Open Source video deinterlace version 1</p>
-      <p>Version 1.2 &#151;<b>Stable</b>&#151; [<a href="/dtv/dTVex12.zip">Binary 
-        Zipped</a>] [<a href="/dtv/dTV_Readme102.htm">README</a>]<br>
+      <p>Version 1.2 &#151;<b>Stable</b>&#151; [<a href="/dTVex12.zip">Binary 
+        Zipped</a>] [<a href="/dTV_Readme102.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for flipping with bTV plug-ins</p>
-      <p>Version 1.1 [<a href="/dtv/dTVex11.zip">Binary Zipped</a>] [<a href="/dtv/dTV_Readme101.htm">README</a>]<br>
+      <p>Version 1.1 [<a href="/dTVex11.zip">Binary Zipped</a>] [<a href="/dTV_Readme101.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Support for bTV plugins added<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Full screen support</p>
-      <p>Version 1.0 [<a href="/dtv/dTVexe.zip">Binary Zipped</a>] [<a href="/dtv/dTVsrc.zip">Source 
-        Zipped</a>] [<a href="/dtv/dTV_Readme100.htm">README</a>]<br>
+      <p>Version 1.0 [<a href="/dTVexe.zip">Binary Zipped</a>] [<a href="/dTVsrc.zip">Source 
+        Zipped</a>] [<a href="/dTV_Readme100.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Original version--support for manual inverse 
         telecine <br>
       </p>
@@ -121,7 +121,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/dtv/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -129,15 +129,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/dtv/" class="bottommenu">home</a> | <a href="/dtv/about.htm" class="bottommenu">about</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/dtv/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/dtv/News.htm" class="bottommenu">news</a> | <a href="/dtv/Thanks.htm" class="bottommenu"></a><a href="/dtv/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/dtv/Reviews.htm" class="bottommenu"></a><a href="/dtv/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/dtv/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/dtv/installation.htm" class="bottommenu">setup</a> | <a href="/dtv/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
+        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
+        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
+        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/dtv/FAQ.htm" class="bottommenu">faq</a> | <a href="/dtv/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/dtv/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
+        | <a href="/Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
