--- a/htdocs/News.htm
+++ b/htdocs/News.htm
@@ -39,6 +39,16 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
+      <p><b>1.9</b><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Debug logfile dTV.txt disabled by default<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly better handling of poor pulldown 
+        material<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Minor simplifications to User Interface<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better brightness/contrast/color defaults 
+        for NTSC (majority of users)<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Advanced Video Flags configuration dialog</p>
       <p><b>1.8</b><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aspect ratio control simplified and made 
         more intuitive<br>
