--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -39,7 +39,19 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Version 1.8&#151;<b>Experimental</b>&#151;[<a href="/distributions/dTV18exe.zip">Binary 
+      <p>Version 1.9&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV19src.zip">Source Zipped</a>] [<a href="dTV_Readme109.htm">README</a>]<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Debug logfile dTV.txt disabled by default<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly better handling of poor pulldown 
+        material<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; Minor simplifications to User Interface<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better brightness/contrast/color defaults 
+        for NTSC (majority of users)<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Advanced Video Flags configuration dialog 
+      </p>
+      <p>Version 1.8&#151;<b>Stable</b>&#151;[<a href="/distributions/dTV18exe.zip">Binary 
         Zipped</a>] [<a href="/distributions/dTV18src.zip">Source Zipped</a>] 
         [<a href="/dTV_Readme108.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aspect ratio control simplified and made 
@@ -91,8 +103,8 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         reliable needs some tweaking)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adaptive video deinterlacing<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Teletext and CC broken</p>
-      <p>Version 1.4&#151;<b>Stable</b>&#151;[<a href="/dTV14exe.zip">Binary 
-        Zipped</a>] [<a href="/dTV14src.zip">Source Zipped</a>] [<a href="/dTV_Readme104.htm">README</a>]<br>
+      <p>Version 1.4&#151;<b>Stable</b>&#151;[<a href="/dTV14exe.zip">Binary Zipped</a>] 
+        [<a href="/dTV14src.zip">Source Zipped</a>] [<a href="/dTV_Readme104.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for overlays in low colour depths<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Still capture in ppm format<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overscan support</p>
